2007-08-12  Kouichirou Eto  <2007 eto.com>

	* lib/qwik/farm.rb (each): Add check site (stub).
	* lib/qwik/farm.rb (check_inactive_sites): Check the directory is
	a site or not.

	* lib/qwik/qwikweb-server.rb: Add plugin directory.

	* lib/qwik/helper.rb: New file as load path helper.

	* lib/qwik/page-wikidb.rb: Add a test case to check tab.

	* share/super/_SiteConfig.txt: Add default setting.
	* share/super/_SiteConfig.txt: Add description.

	* lib/qwik/site-config.rb: Get default config from super site.

	* lib/qwik/site-url.rb: You can select title order of web page.
	* share/super/_SiteConfig.txt: Add setting for it.

	* share/super/_SiteConfig.txt: Change default to page title first.
	* lib/qwik/site-url.rb: Update test caeses.

	* lib/qwik/config.rb: Change test directory to '.test'.
	* lib/qwik/farm.rb: Ditto.
	* lib/qwik/act-attach.rb: Ditto.
	* lib/qwik/ml-processor.rb: Ditto.
	* lib/qwik/password.rb: Ditto.
	* lib/qwik/test-module-session.rb: Ditto.

	* lib/qwik/util-pathname.rb: Create direcotry with mkpath

2007-08-10  Kouichirou Eto  <2007 eto.com>

	* lib/qwik/act-ruby.rb: Refactoring.

	* lib/qwik/farm.rb: Create _QwikSite.txt when the site is created.
	* lib/qwik/site.rb: Add a test case to check unnecessary directory.

	* lib/qwik/group-db.rb: Do not create unnecessary directory.
	* lib/qwik/farm.rb: Add check.
	* lib/qwik/site.rb: Ditto.

2007-08-09  Kouichirou Eto  <2007 eto.com>

	* lib/qwik/act-ruby.rb: New plugin to embed ruby code.

	* lib/qwik/config.rb: Add 'enable_ruby' setting.
	* etc/config.txt: Ditto.
	* etc/config-debug.txt: Ditto.

	* lib/qwik/act-presen.rb (plg_presen_switch): New plugin to switch
	to presen mode.
	* share/super/_AdminMenu.txt: Add "presen_switch".

	* lib/qwik/act-presen.rb: Make title to back link.
	* share/theme/s5/qwikworld/pretty.css: Ditto.

2007-08-05  Kouichirou Eto  <2007 eto.com>

	* lib/qwik/page-files.rb: Do not backup files in default.

	* lib/qwik/db-backup.rb: Do not backup some pages.
